static/css/cliente_desktop.css
/* ... */
#Seu_Histrico {
	left: 14px;
	top: 0px;
	position: absolute;
	overflow: visible;
	width: 283px;
	height: 33px;
	text-align: center;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 27px;
	color: rgba(7,69,131,1);
}
#logo-canto {
	position: absolute;
	width: 96px;
	height: 80px;
	left: 1408px;
	top: 235px;
	overflow: visible;
}
#fundo-logo {
	fill: rgba(7,69,131,1);
}
.fundo-logo {
	position: absolute;
	overflow: visible;
	width: 96px;
	height: 80px;
	left: 0px;
	top: 0px;
}
#logo {
	position: absolute;
	width: 63px;
	height: 63px;
	left: 21px;
	top: 10px;
	overflow: visible;
}
#buttom-codigo-promocional {
	position: absolute;
	width: 212px;
	height: 34px;
	left: 858px;
	top: 261px;
	overflow: visible;
}
#buttom-fundo-codigo-promociona {
	fill: rgba(9,78,147,1);
	stroke: rgba(238,230,67,1);
	stroke-width: 3px;
	stroke-linejoin: miter;
	stroke-linecap: butt;
	stroke-miterlimit: 4;
	shape-rendering: auto;
}
.buttom-fundo-codigo-promociona {
	position: absolute;
	overflow: visible;
	width: 212px;
	height: 34px;
	left: 0px;
	top: 0px;
}
#Inserir_Cdigo_promocional {
	left: 1px;
	top: 8px;
	position: absolute;
	overflow: visible;
	width: 212px;
	height: 18px;
	text-align: center;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 14px;
	color: rgba(255,255,255,1);
}
#area-do-cliente {
	position: absolute;
	width: 547px;
	height: 74px;
	left: 447px;
	top: 248px;
	overflow: visible;
}
#rea_do_Cliente {
	left: 0px;
	top: 0px;
	position: absolute;
	overflow: visible;
	width: 548px;
	height: 55px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 45px;
	color: rgba(255,255,255,1);
}
#Sair {
	left: 0px;
	top: 49px;
	position: absolute;
	overflow: visible;
	width: 299px;
	height: 25px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 20px;
	color: rgba(238,230,67,1);
}
#informacoes-cliente {
	position: absolute;
	width: 547px;
	height: 247px;
	left: 447px;
	top: 332px;
	overflow: visible;
}
#Voc_possui {
	left: 0px;
	top: 206px;
	position: absolute;
	overflow: visible;
	width: 142px;
	height: 33px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 27px;
	color: rgba(255,255,255,1);
}
#n_2 {
	left: 145px;
	top: 183px;
	position: absolute;
	overflow: visible;
	width: 49px;
	white-space: nowrap;
	text-align: center;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 52px;
	color: rgba(238,230,67,1);
}
#cupons {
	left: 203px;
	top: 206px;
	position: absolute;
	overflow: visible;
	width: 142px;
	height: 33px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 27px;
	color: rgba(255,255,255,1);
}
#CPF {
	left: 0px;
	top: 86px;
	position: absolute;
	overflow: visible;
	width: 48px;
	height: 30px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 25px;
	color: rgba(255,255,255,1);
}
#n__999999-9 {
	left: 57px;
	top: 86px;
	position: absolute;
	overflow: visible;
	width: 317px;
	height: 30px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 25px;
	color: rgba(255,255,255,1);
}
#Telefone {
	left: 0px;
	top: 121px;
	position: absolute;
	overflow: visible;
	width: 102px;
	height: 30px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 25px;
	color: rgba(255,255,255,1);
}
#n_1_99999-9999 {
	left: 111px;
	top: 121px;
	position: absolute;
	overflow: visible;
	width: 317px;
	height: 30px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 25px;
	color: rgba(255,255,255,1);
}
#Alterar {
	left: 286px;
	top: 132px;
	position: absolute;
	overflow: visible;
	width: 59px;
	height: 19px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 15px;
	color: rgba(238,230,67,1);
}
#Ol_Usurio_ {
	left: 0px;
	top: 0px;
	position: absolute;
	overflow: visible;
	width: 548px;
	height: 86px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 70px;
	color: rgba(255,255,255,1);
}
#IDC_02 {
	left: 369px;
	top: 53px;
	position: absolute;
	overflow: visible;
	width: 59px;
	height: 19px;
	text-align: left;
	font-family: Arciform Sans;
	font-style: normal;
	font-weight: normal;
	font-size: 15px;
	color: rgba(238,230,67,1);
}

